@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-12T16:23:24Z",
+  "timestamp" : "2022-05-13T08:18:29Z",
   "count_outdated" : 262,
   "uniques_outdated" : 140,
-  "count" : 293,
-  "uniques" : 161,
+  "count" : 294,
+  "uniques" : 162,
   "clones" : [
     {
       "timestamp": "2022-05-01T00:00:00Z",
@@ -74,6 +74,13 @@
       "count_minmax": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-05-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
